# interactive-renamer

./: .gitignore  Cargo.toml  README.md
src/: app.rs  dao.rs  input_form.rs  main.rs  path_utils.rs  renamer.rs  stdlib_utils.rs
src/app_state/: app_transition.rs  configure_mapping_state.rs  mapping_state.rs  mod.rs  selecting_input_state.rs
src/ui/: configure_mapping.rs  mod.rs  selecting_input.rs
src/widgets/: mod.rs
src/widgets/tree_list/: interactive.rs  mod.rs  state.rs  widget.rs
