[package]
name = "renamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.27"
regex = "1.5.6"
crossterm = "0.23"
itertools = "0.10.3"

[dependencies.tui]
git = "https://github.com/dymk/tui-rs"
rev = "7f689274677dff2fd5769e04b9c2032c2ee10054"

# [patch.'https://github.com/dymk/tui-rs']
# tui = { path = "../tui-rs" }