[package]
name = "renamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.27"
regex = "1.5.6"
crossterm = "0.23"
itertools = "0.10.3"

[dependencies.tui]
git = "https://github.com/dymk/tui-rs"
rev = "188832d6fb9d072a432f9d786f7a0476d8a9131d"

[patch.'https://github.com/dymk/tui-rs']
tui = { path = "../tui-rs" }